# slides-knowledge-extracter

./: .env.example  .gitignore  README.md  handbook.md  plan.md  pyproject.toml
designs/: design_task1.md  design_task2.md  design_task3_4.md
source/: config.py  extractor.py  main.py  orchestrator.py  preprocessor.py  state.py  synthesizer.py
tasks/: task1_orchestrator.md  task2_file_preprocessing.md  task3_multimodal_extraction.md  task4_knowledge_synthesis.md
tests/: test_e2e.py  test_extractor.py  test_main.py  test_orchestrator.py  test_preprocessor.py  test_synthesizer.py
